@@ -12,7 +12,7 @@ package com.hp.hpl.jena.n3;
 /** Turtle writer.  It is actually an appropriately configured   
  *
  * @author		Andy Seaborne
- * @version 	$Id: N3TurtleJenaWriter.java,v 1.1 2009-06-29 08:55:32 castagna Exp $
+ * @version 	$Id: N3TurtleJenaWriter.java,v 1.2 2009-08-05 16:08:51 andy_seaborne Exp $
  */
 
 
@@ -23,8 +23,10 @@ public class N3TurtleJenaWriter extends N3JenaWriter
     {
         super() ;
         
-        if ( writer.getPropValue("usePropertySymbols") == null )
-            writer.useWellKnownPropertySymbols = false ;
+//        if ( writer.getPropValue("usePropertySymbols") == null )
+//            writer.useWellKnownPropertySymbols = false ;
+        // Only allow "a" for rdf:type.
+        writer.wellKnownPropsMap = N3JenaWriterPP.wellKnownPropsMapTurtle ;
         writer.allowTripleQuotedStrings = true ;
     }
 }
