@@ -24,7 +24,7 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  *
- * $Id: RDFWriterFImpl.java,v 1.2 2009-08-05 15:26:37 andy_seaborne Exp $
+ * $Id: RDFWriterFImpl.java,v 1.3 2009-08-05 16:08:51 andy_seaborne Exp $
  */
 
 package com.hp.hpl.jena.rdf.model.impl;
@@ -41,7 +41,7 @@ import com.hp.hpl.jena.JenaRuntime ;
 /**
  *
  * @author  bwm
- * @version $Revision: 1.2 $ $Date: 2009-08-05 15:26:37 $
+ * @version $Revision: 1.3 $ $Date: 2009-08-05 16:08:51 $
  */
 public class RDFWriterFImpl extends Object implements RDFWriterF {
 
@@ -73,11 +73,12 @@ public class RDFWriterFImpl extends Object implements RDFWriterF {
             Jena.PATH + ".rdf.model.impl.NTripleWriter",
             Jena.PATH + ".n3.N3JenaWriter",
             Jena.PATH + ".n3.N3JenaWriterPP",
-//            Jena.PATH + ".n3.N3TurtleJenaWriter",   // Write Turtle to ensure safe round tripping.
-//            Jena.PATH + ".n3.N3TurtleJenaWriter",   // Ditto.
 
-            Jena.PATH + ".n3.N3JenaWriterPlain",      // Keep as N3 for now - a test fails.
-            Jena.PATH + ".n3.N3JenaWriterTriples",
+            Jena.PATH + ".n3.N3TurtleJenaWriter",   // Write Turtle to ensure safe round tripping.
+            Jena.PATH + ".n3.N3TurtleJenaWriter",   // Ditto.
+
+//            Jena.PATH + ".n3.N3JenaWriterPlain",      // Keep as N3 for now - a test fails.
+//            Jena.PATH + ".n3.N3JenaWriterTriples",
             
             Jena.PATH + ".n3.N3JenaWriterTriples",  // Same writer, different writer name
             Jena.PATH + ".n3.N3TurtleJenaWriter",   // Alternative names for Turtle
